@@ -21,6 +21,7 @@ typedef unsigned __int64 uint64_t;
 #else  // defined(_MSC_VER)
 
 #include <cstdint>
+#include <cstdlib>
 
 #endif  // !defined(_MSC_VER)
 
